micro-ecc build artifacts
Built using gcc-arm-none-eabi-10.3-2021.0 v10.3.1

micro-ecc added a submodule

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Examples
-examples/
-nRF_MDK*.msi
+examples/*
+
+*.msi
 
 # Segger Embedded Studio
 *.emSession
@@ -10,3 +11,4 @@ nRF_MDK*.msi
 
 # OS X
 .DS_Store
+external/micro-ecc/**/_build/*
