--- a/components/toolchain/gcc/Makefile.posix
+++ b/components/toolchain/gcc/Makefile.posix
@@ -1,3 +1,3 @@
-GNU_INSTALL_ROOT ?= /usr/local/gcc-arm-none-eabi-7-2018-q2-update/bin/
-GNU_VERSION ?= 7.3.1
+GNU_INSTALL_ROOT ?= /Users/shahar/Develop/gcc-arm/gcc-arm-none-eabi-10.3-2021.07/bin/
+GNU_VERSION ?= 10.3.1
 GNU_PREFIX ?= arm-none-eabi
