--- a/components/toolchain/gcc/Makefile.windows
+++ b/components/toolchain/gcc/Makefile.windows
@@ -1,3 +1,3 @@
-GNU_INSTALL_ROOT := C:/Program Files (x86)/GNU Tools ARM Embedded/9 2019-q4-major/bin/
-GNU_VERSION := 9.2.1
+GNU_INSTALL_ROOT := C:/Program Files (x86)/GNU Arm Embedded Toolchain/10 2021.07/bin/
+GNU_VERSION := 10.3.1
 GNU_PREFIX := arm-none-eabi
